feat: add endpoint and controller for retrieving the latest tournament
